Fix Dashboard page scroll spacing

--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -34,9 +34,27 @@ h2 {
 .dashboard {
   display: flex;
   flex-direction: column;
-  height: calc(100% + 96px);
+  height: calc(
+    100% + 96px + env(safe-area-inset-top) + env(safe-area-inset-bottom)
+  );
   margin-bottom: 96px;
   background: #ffffff;
+}
+
+.transactions-container {
+  background: #ffffff;
+  margin-top: -1.5rem;
+  padding: 1.5rem 0;
+  border-radius: 1rem 1rem 0px 0px;
+  flex-grow: 1;
+  .main-heading {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+    font-size: 1.25rem;
+    color: v.$dark-green;
+    text-transform: none;
+    padding: 0 1.25rem 0.5rem 1.25rem;
+  }
 }
 
 .balance {
@@ -115,21 +133,5 @@ h2 {
       font-size: 2.25rem;
       font-weight: 700;
     }
-  }
-}
-
-.transactions-container {
-  background: #ffffff;
-  margin-top: -1.5rem;
-  padding: 1.5rem 0;
-  border-radius: 1rem 1rem 0px 0px;
-  flex-grow: 1;
-  .main-heading {
-    font-family: 'Rubik', sans-serif;
-    font-weight: 500;
-    font-size: 1.25rem;
-    color: v.$dark-green;
-    text-transform: none;
-    padding: 0 1.25rem 0.5rem 1.25rem;
   }
 }
